# substrate-enterprise-sample

./: .gitignore  .gitmodules  README.md
chain/: Cargo.toml  README.md  localTestnetChainSpec.json  localTestnetChainSpecRaw.json  types.json
chain-story-init/: .gitignore  package.json
chain-story-init/src/: script.js
chain-story-init/src/config/: common.json  development.json  index.js
chain/node/: Cargo.toml
chain/node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
chain/pallets/did/src/: lib.rs
chain/pallets/identifiers/: Cargo.toml
chain/pallets/ocw-weather/: Cargo.toml
chain/pallets/ocw-weather/src/: lib.rs  tests.rs
chain/pallets/organizations/: Cargo.toml
chain/pallets/organizations/src/: lib.rs  mock.rs  tests.rs
chain/pallets/product-registry/: Cargo.toml  README.md
chain/pallets/product-registry/src/: lib.rs  mock.rs  tests.rs
chain/pallets/product-tracking/: Cargo.toml  README.md  types.json
chain/pallets/product-tracking/src/: builders.rs  lib.rs  mock.rs  tests.rs  types.rs
chain/pallets/rbac/: Cargo.toml  readme.md  types.json
chain/pallets/rbac/src/: lib.rs
chain/pallets/registrar/: Cargo.toml
chain/pallets/registrar/src/: lib.rs
chain/pallets/supply-assets/: Cargo.toml
chain/pallets/supply-assets/src/: lib.rs  mock.rs  tests.rs
chain/pallets/template/: Cargo.toml
chain/pallets/template/src/: lib.rs
chain/pallets/validator-set/: Cargo.toml
chain/pallets/validator-set/src/: lib.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
chain/scripts/: alice.sh  bob.sh  charlie.sh
docs/: user-stories.md  user-story.md
listener/: package.json
listener/src/: index.js
ocw-listener/: .env
ocw-listener/src/: utils.js
scripts/: init.js  package.json
scripts/src/: init.js
scripts/src/lib/: submit-signed-xt.js  types.js
ui/: README.md  package.json
ui/public/: index.html  manifest.json
ui/public/assets/: main.css
ui/src/: AccountSelector.js  App.js  BlockNumber.js  ChainData.js  Dashboard.js  Homepage.js  Identifiers.js  Permissions.js  ProductHistory.js  ProductLog.js  ProductTracking.js  Products.js
ui/src/archive/: DId.js
ui/src/components/: AccountSelector.js  AddSuperAdmin.js  AddToOrg.js  AssignRevokeRole.js  AssignRole.js  BlockNumber.js  CreateOrg.js  CreateRole.js  Events.js  Members.js  NodeInfo.js  OrganizationSelector.js  Organizations.js  ProductList.js  Products.js  RegisterProductForm.js  RegisterShipmentForm.js  RevokeAccess.js  ShipmentDetails.js  ShipmentList.js  ShipmentOperations.js  ShipmentSelection.js  ShipmentTrackingPage.js  Shipments.js  TopNavMenu.js  Tracking.js  index.js
ui/src/config/: common.json  development.json
ui/src/substrate-lib/components/: TxButton.js
