[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
version = '2.0.0-alpha.6'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.6'

[[bin]]
name = 'node-template'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'
jsonrpc-core = '14.0.5'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
version = '0.8.0-alpha.6'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
version = '2.0.0-alpha.6'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0-alpha.6'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.pallet-contracts-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'