[package]
name = 'enterprise-sample'
version = '2.0.0-rc4'
description = 'A supply chain platform for a decentralized consortium (sample project).'
build = 'build.rs'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://github.com/substrate-developer-hub/substrate-enterprise-sample/blob/master/README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-enterprise-sample'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.enterprise-sample-runtime]
path = '../runtime'
version = '2.0.0-rc4'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[[bin]]
name = 'enterprise-sample'
