[package]
name = 'enterprise-sample-runtime'
version = '2.0.0'
description = 'Node Template Runtime'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '1.0.5' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# Substrate dependencies
frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
pallet-aura = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-collective = { default-features = false, version = '2.0.0' }
pallet-democracy = { default-features = false, version = '2.0.0' }
pallet-elections-phragmen = { default-features = false, version = '2.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
pallet-scheduler = { default-features = false, version = '2.0.0' }
pallet-session = { default-features = false, version = '2.0.0' }
pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-consensus-aura = { default-features = false, version = '0.8.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }
sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
sp-version = { default-features = false, version = '2.0.0' }

# Substrate Enterprise Sample -specific pallets

pallet-did = { default_features = false, version = '2.0.0', git = 'https://github.com/substrate-developer-hub/pallet-did' }

[dependencies.rbac]
default-features = false
git = 'https://github.com/gautamdhameja/substrate-rbac'
package = 'substrate-rbac'
branch = 'enterprise-sample'

[dependencies.product-registry]
default-features = false
package = 'pallet-product-registry'
path = '../pallets/product-registry'
version = '2.0.0'

[dependencies.product-tracking]
default-features = false
package = 'pallet-product-tracking'
path = '../pallets/product-tracking'
version = '2.0.0'

[dependencies.registrar]
default-features = false
package = 'pallet-registrar'
path = '../pallets/registrar'
version = '2.0.0'

[dependencies.validatorset]
default-features = false
git = 'https://github.com/gautamdhameja/substrate-validator-set'
package = 'substrate-validator-set'
branch = 'master'
version = '0.2.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-collective/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
	'pallet-did/std',
	'product-registry/std',
	'product-tracking/std',
	'validatorset/std',
	'rbac/std',
	'registrar/std'
]
