[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'sp-io/std',
    'sp-std/std',
    'sp-core/std',
    'did/std',
    'validator-set/std',
]

[package]
authors = ['Anonymous']
description = 'FRAME pallet organizations'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-orgs'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.6'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'


[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.did]
default-features = false
package = 'pallet-did'
path = '../identifiers'
version = '2.0.0-alpha.6'

[dependencies.validator-set]
default-features = false
package = 'pallet-validator-set'
path = '../validator-set'
version = '2.0.0'