[package]
authors = ['Anonymous']
description = 'FRAME pallet organizations'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-orgs'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'did/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'sp-io/std',
    'sp-std/std',
    'sp-core/std',
    'validator-set/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.did]
default-features = false
package = 'pallet-did'
path = '../identifiers'
version = '2.0.0-alpha.6'

[dependencies.validator-set]
default-features = false
package = 'pallet-validator-set'
path = '../validator-set'
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'