[package]
name = "substrate-rbac"
version = "0.1.0"
authors = ["gautamdhameja"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/gautamdhameja/substrate-rbac"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.3.4' }
serde = { features = ['derive'], optional = true, version = '1.0.114' }

frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'frame-system/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]
