[package]
description = 'Registrar Pallet'
edition = '2018'
license = 'Apache-2.0'
name = 'pallet-registrar'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.did]
default-features = false
git = 'https://github.com/substrate-developer-hub/pallet-did'
package = 'pallet-did'
version = '2.0.0'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.114' }

frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0'}

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    'sp-runtime/std',
    'sp-std/std',
    'did/std',
]
